<resources>
    <string name="title_activity_tela_comparacao">Comparação de Estados</string>
    <string name="title_activity_tela_lista_estado">Lista de estados</string>
    <string name="title_activity_tela_sobre">Sobre o EEF</string>
    <string name="title_activity_tela_consulta_indicativo">Consulta de Indicativos</string>
    <string name="title_activity_tela_indicativos_consultados">Escolha os indicativos</string>
    <string name="title_activity_tela_resultado_consulta">Comparação de Estados</string>
    <string name="title_activity_tela_feed">Notícias</string>
    <string name="title_activity_tela_feed_sobre">Sobre as Notícias</string>
    <string name="title_activity_tela_estado">Indicativos do Estado</string>
    <string name="title_activity_tela_escolhe_indicativo_grafico">Escolha um Indicativo</string>
    <string name="title_activity_grafico">Gráfico</string>
    <string name="title_activity_tela_grafico">Gráfico</string>
    <string name="title_activity_sobre_indicativos">Sobre os Indicativos</string>
    <string name="title_activity_tela_sobre_consulta">Sobre a Consulta</string>
    <string name="title_noticias_sobre">Notícias</string>
    <string name="title_activity_tela_comparacoes_gerais">Comparacões</string>
    <string name="title_activity_tela_consulta_por_indicativo">Consulta por Indicativo</string>
    <string name="title_activity_tela_resultado_consulta_por_indicativo">Resultado da Consulta</string>
    <string name="title_activity_tela_consultas_gerais">Consultas</string>
    <string name="title_activity_tela_sobre_comparacao">Sobre a Comparação</string>
    <string name="title_activity_tela_historico_estado">Histórico de Indicativo</string>
    <string name="title_activity_tela_sobre_lista_estado">Lista Estados</string>
    <string name="title_activity_tela_sobre_estado">Estado</string>
    <string name="title_activity_tela_sobre_escolha_indicativo">Sobre Escolha de Indicativo</string>
    <string name="title_activity_tela_sobre_comparacao_de_estados">Sobre Comparação de Estados</string>
    <string name="title_activity_tela_sobre_resultado_da_consulta">Sobre Resultado da Consulta</string>
    <string name="title_activity_tela_sobre_historico_de_indicativo">Sobre Histórico de Indicativo</string>
    <string name="title_activity_tela_sobre_grafico">Sobre Gráfico</string>
    <string name="title_activity_tela_sobre_escolhe_indicativo_grafico_comparacao">Sobre Escolha um Indicativo</string>
    <string name="app_name">Educação em Foco</string>
    <string name="action_settings">Settings</string>
    <string name="menu_botao_lista_estados">Lista de Estados</string>
    <string name="menu_botao_comparacao">Comparar</string>
    <string name="botao_gera_grafico">Gerar grafico</string>
    <string name="titulo_escolhe_indicativo_grafico">Escolha o indicativo para gerar o gráfico:</string>
    <string name="string_vazia"></string>
    <string name="menu_botao_consulta">Consulta</string>
    <string name="menu_botao_feed">Notícias</string>
    <string name="menu_botao_consulta_por_indicativo">Consulta por indicativo</string>
    <string name="botao_tela_indicativos">Ir</string>
    <string name="botao_indicativos">Gerar gráfico</string>
    <string name="populacao">População</string>
    <string name="participacao_PIB_percentual">Participação Estadual no PIB (%)</string>
    <string name="projetos_difusao_tecnologica_qtd">Projeto de Difusão Tecnológica (Qtd.)</string>
    <string name="projetos_difusao_tecnologica_investimento">Projeto de Difusão Tecnológica (R$)</string>
    <string name="participacao_IDEB_fundamental_iniciais">IDEB do Ensino Fundamental (Séries Iniciais)</string>
    <string name="participacao_IDEB_fundamental_finais">IDEB do Ensino Fundamental (Séries Finais)</string>
    <string name="participacao_IDEB_medio">IDEB do Ensino Médio</string>
    <string name="programa_primeiros_projetos_qtd">Programa Primeiros Projetos (Qtd.)</string>
    <string name="programa_primeiros_projetos_investimento">Programa Primeiros Projetos (R$)</string>
    <string name="projetos_pesquisa_CNPq_qtd">Projetos de Pesquisa Apoio CNPq (Qtd.)</string>
    <string name="projetos_pesquisa_CNPq_investimento">Projetos de Pesquisa Apoio CNPq (R$)</string>
    <string name="jovens_pesquisadores_qtd">Jovens pesquisadores (Qtd.)</string>
    <string name="jovens_pesquisadores_investimento">Jovens pesquisadores (R$)</string>
    <string name="projeto_iniciacao_qtd">Projetos INCT (Qtd.)</string>
    <string name="projeto_iniciacao_investimento">Projetos INCT (R$)</string>
    <string name="media_alunos_por_turma">Média de Alunos por Turma (Qtd.)</string>
    <string name="horas_aula_ensino">Média de horas aula diárias</string>
    <string name="taxa_distorcao">Taxa de Distorção de Idade (%)</string>
    <string name="taxa_aprovacao">Taxa de Aproveitamento (%)</string>
    <string name="taxa_abandono">Taxa de Abandono Escolar (%)</string>
    <string name="censo">Censo Escolar (matriculados)</string>
    <string name="alunos_por_turma_fundamental">Média de Alunos por Turma do Ensino Fundamental(Qtd.)</string>
    <string name="alunos_por_turma_medio">Média de Alunos por Turma do Ensino Médio(Qtd.)</string>
    <string name="horas_aula_fundamental">Média de horas aula diárias do Ensino Fundamental</string>
    <string name="horas_aula_medio">Média de horas aula diárias do Ensino Médio</string>
    <string name="taxa_distorcao_fundamental">Taxa de Distorção Idade/Série do Ensino Fundamental (%)</string>
    <string name="taxa_distorcao_medio">Taxa de Distorção Idade/Série do Ensino Médio (%)</string>
    <string name="taxa_aprovacao_fundamental">Taxa de Aprovação do Ensino Fundamental (%)</string>
    <string name="taxa_aprovacao_medio">Taxa de Aprovação do Ensino Médio (%)</string>
    <string name="taxa_abandono_fundamental">Taxa de Abandono do Ensino Fundamental (%)</string>
    <string name="taxa_abandono_medio">Taxa de Abandono do Ensino Médio (%)</string>
    <string name="censo_anos_iniciais_fundamental">Censo Escolar dos Anos Iniciais do Ensino Fundamental (Matriculados)</string>
    <string name="censo_anos_finais_fundamental">Censo Escolar dos Anos Finais do Ensino Fundamental (Matriculados)</string>
    <string name="censo_ensino_medio">Censo Escolar do Ensino Médio (Matriculados)</string>
    <string name="censo_eja_medio">Censo Escolar do EJA - Fundamental (Matriculados)</string>
    <string name="censo_eja_fundamental">Censo Escolar do EJA - Médio (Matriculados)</string>
    <string name="bt_grafico">Gráfico</string>
    <string name="bt_historico">Historico</string>
    <string name="bt_estados">Estados</string>
    <string name="participacao_PIB">Participacao Estadual no PIB</string>
    <string name="numero_projetos">Projetos de Difusão Tecnológica</string>
    <string name="participacao_IDEB">IDEB</string>
    <string name="Programa_primeiros_projetos">Programa Primeiros Projetos</string>
    <string name="Projetos_pesquisa_CNPq">Projetos de Pesquisa Apoio CNPq</string>
    <string name="jovens_pesquisadores">Jovens pesquisadores</string>
    <string name="projeto_iniciacao">Projetos INCT</string>
    <string name="estados_opcao">Escolha dois estados: </string>
    <string name="compara_estados">Comparar</string>
    <string name="titulo_menu">Educação em Foco</string>
    <string name="string_x"> x </string>
    <string name="botao_historico_estado"> Historico </string>
    <string name="botao_historico"> Histórico</string>
    <string name="botao_estado"> Estado</string>
    <string name="tela_sobre">Dados usados no EEF</string>
    <string name="participacao_percentual_PIB"> Participação Estadual no PIB: </string>
    <string name="participacao_percentual_PIB_conteudo"> Porcentagem referente a participação de cada estado na soma total do PIB nacional </string>
    <string name="projetos_difusao">Projetos de Difusão Tecnologica:</string>
    <string name="projetos_difusao_conteudo">  Número de projetos de difusão e popularização de ciência e tecnologia apoiados.
    		Inclui apoio a diversos projetos de difusão e popularização da ciência e tecnologia;</string>
    <string name="ideb"> IDEB - Indice de Desenvolvimento da Educação Básica: </string>
    <string name="ideb_conteudo"> O IDEB é um indicador criado pelo governo federal para medir a qualidade do ensino nas escolas públicas. 
    		A escala de notas vai de 0 a 10.</string>
    <string name="primeiros_projetos"> Programa Primeiros Projetos:  </string>
    <string name="primeiros_projetos_conteudo"> Programa de apoio à infraestrutura de ciência e técnologia para jovens pesquisadores. </string>
    <string name="projetos_apoio_cnpq"> Projetos de pesquisa e apoio CNPq:  </string>
    <string name="projetos_apoio_cnpq_conteudo"> Número de projetos contratados pelos Principais Programas de Apoio à Pesquisa do CNPq.  </string>
    <string name="projetos_jovens_pesquisadores"> Projetos Jovens Pesquisadores:  </string>
    <string name="projetos_jovens_pesquisadores_conteudo"> Número de projetos contratados pelo Programa Jovens Pesquisadores.
    		A UF considerada é a UF da instituição de destino.  </string>
    <string name="projetos_inct"> Projetos Instituto Nacional de Ciência e Tecnologia - INCT: </string>
    <string name="projetos_inct_conteudo"> Número de projetos contratados dos Institutos Nacionais de Ciência e Tecnologia. </string>
    <string name="botao_sobre">Sobre</string>
    <string name="botao_sobre_descricao">	Através dessa tela é possivel ao usuário escolher um dos indicativos abaixo e a partir da seleção visualizar o indicativo para todos os estados</string>
    <string name="titulo_escolhe_estado_por_indicativo">Escolha o indicativo</string>
    <string name="bt_verifica_estados_por_indicativo">Verificar estados</string>
    <string name="title_consultar_estados">Consultar Estados</string>
    <string name="title_consultar_estado1">Escolha o primeiro estado.</string>
    <string name="botao_sobre_escolha_indicativo">Através dessa tela é possível selecionar um ou mais indicativos e após ele selecionar o botão avançar ,será redirecionado a tela de comparação do indicativo(s) escolhido entre os dois estados.Também nessa tela o usuário tem a opção de marcar todos os indicativos ou desmarcar todos os indicativos</string>
    <string name="acre">Acre</string>
    <string name="alagoas">Alagoas</string>
    <string name="amapa">Amapa</string>
    <string name="amazonas">Amazonas</string>
    <string name="bahia">Bahia</string>
    <string name="ceara">Ceará</string>
    <string name="df">Distrito Federal</string>
    <string name="espiritoSanto">Esprito Santo</string>
    <string name="goias">Goias</string>
    <string name="maranhao">Maranhão</string>
    <string name="matoGrossoDoSul">Mato Grosso do Sul</string>
    <string name="matoGrosso">Mato Grosso</string>
    <string name="minasGerais">Minas Gerais</string>
    <string name="para">Pará</string>
    <string name="paraiba">Paraíba</string>
    <string name="parana">Paraná</string>
    <string name="pernambuco">Pernambuco</string>
    <string name="piaui">Piaui</string>
    <string name="rioDeJaneiro">RioDeJaneiro</string>
    <string name="rioGrandeDoNorte">Rio Grande do Norte</string>
    <string name="consultar_estados_conteudo">Selecionando a opção de consultar estados você será redirecionado para uma tela onde irá aparecer a lista de todos os estados, para que você possa consultar os dados do mesmo.</string>
    <string name="comparar_estados_conteudo">Selecionando a opção de comparar os estados você será redirecionado para uma tela onde você  poderá selecionar se deseja comparar por estado ou por indicativo.</string>
    <string name="noticias_sobre_conteudo">Selecionando a opção de notícias você será redirecionado para uma tela onde você  poderá visualizar as últimas notícias publicadas no site noticias.gov.br</string>
    <string name="title_comparar_estados">Comparar Estados</string>
</resources>