<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewConsulta"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
	tools:context=".TelaIndicativosConsultados" >
	
<LinearLayout
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    

    <CheckBox
        android:id="@+id/checkBox_ideb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/participacao_IDEB" />

    <CheckBox
        android:id="@+id/checkBox_primeiros_projeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Programa_primeiros_projetos" />

    <CheckBox
        android:id="@+id/checkBox_projetos_cnpq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Projetos_pesquisa_CNPq" />

    <CheckBox
        android:id="@+id/checkBox_projetos_jovens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jovens_pesquisadores" />

    <CheckBox
        android:id="@+id/checkBox_projetos_iniciacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/projeto_iniciacao" />

    <CheckBox
        android:id="@+id/checkBox_projetos_difusao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_projetos" />

    <CheckBox
        android:id="@+id/checkBox_populacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/populacao" />

    <CheckBox
        android:id="@+id/checkBox_participacao_pib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participacao_percentual_PIB" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="29dp"
        android:onClick="clickBotao"
        android:text="@string/botao_tela_indicativos" />

</LinearLayout>

</ScrollView>