<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/sobre_menu_consultar_estados_title"
            style="@style/tituloSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_consultar_estados"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/sobre_menu_consultar_estados_conteudo"
            style="@style/subTituloSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/consultar_estados_conteudo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/sobre_menu_comparar_estados_title"
            style="@style/tituloSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_comparar_estados"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/sobre_menu_comparar_estados_conteudo"
            style="@style/subTituloSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/comparar_estados_conteudo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/sobre_menu_noticias_title"
            style="@style/tituloSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_noticias_sobre"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/sobre_menu_noticias_conteudo"
            style="@style/subTituloSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/noticias_sobre_conteudo"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</ScrollView>